--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
     <!--剔除window背景的主题  适用于页面设置了背景色的情况-->
@@ -29,6 +30,7 @@
         <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@null</item>
         <item name="android:windowIsTranslucent">false</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
     <!--剔除window背景的主题  适用于页面设置了背景色的情况-->
@@ -37,10 +39,13 @@
     </style>
 
     <!--带有window背景的主题 透明背景-->
-    <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="AppTheme.NoActionBar_TranslucentBar_without_bg">
+    <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowAnimationStyle">@style/WindowAnimation_NoAnimation</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
     <!-- 自定义弹出框基础样式， 自定义样式的Dialog如需定义theme, 请继承此theme -->
