--- a/app/src/main/res/values-v19/styles.xml
+++ b/app/src/main/res/values-v19/styles.xml
@@ -13,8 +13,13 @@
     </style>
 
     <!--带有window背景的主题 透明背景-->
-    <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="Pop.Activity.Theme">
+    <style name="AppTheme.NoActionBar_TranslucentBar_with_transparent_bg" parent="AppTheme">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowTranslucentNavigation">false</item>
+        <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
 
@@ -24,5 +29,6 @@
         <item name="android:windowTranslucentStatus">true</item>
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 </resources>
