--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -27,6 +27,7 @@
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
     <!--透明状态栏-->
@@ -39,6 +40,7 @@
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
     <style name="Pop.Activity.Theme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -62,6 +64,7 @@
         <item name="android:windowTranslucentNavigation">false</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowSoftInputMode">adjustNothing</item>
     </style>
 
 </resources>
