--- a/app/src/main/res/layout/filebrowser_file_item.xml
+++ b/app/src/main/res/layout/filebrowser_file_item.xml
@@ -1,46 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="64dp" >
+                xmlns:tools="http://schemas.android.com/tools"
+                android:layout_width="match_parent"
+                android:layout_height="60dp">
 
     <View
         android:id="@+id/mask"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/unit"
-        style="@style/common_file_unit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:ellipsize="end"
-        android:paddingRight="16dp"
-        android:paddingTop="4.5dp"
-        android:singleLine="true"
-        android:text="MB"
-        tools:ignore="HardcodedText,RtlSymmetry" />
-
-    <TextView
-        android:id="@+id/size"
-        style="@style/common_file_size"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/unit"
-        android:layout_toLeftOf="@+id/unit"
-        android:ellipsize="end"
-        android:includeFontPadding="false"
-        android:paddingRight="2dp"
-        android:singleLine="true"
-        android:text="34"
-        tools:ignore="HardcodedText" />
-
     <ImageView
         android:id="@+id/icon"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
@@ -55,13 +27,13 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="10dp"
-        android:layout_toLeftOf="@+id/size"
         android:layout_toRightOf="@+id/icon"
         android:orientation="vertical" >
 
         <TextView
             android:id="@+id/title"
-            style="@style/common_item_name"
+            android:textColor="@color/black_70"
+            android:textSize="14sp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -74,7 +46,8 @@
 
         <TextView
             android:id="@+id/time"
-            style="@style/common_item_info_gray"
+            android:textColor="@color/black_40"
+            android:textSize="10sp"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
