--- a/app/src/main/res/layout/fragment_search_result.xml
+++ b/app/src/main/res/layout/fragment_search_result.xml
@@ -1,13 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:background="@color/white">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription,SpUsage"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="@color/transparent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/fragment_search_result_rv"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="@color/white">
 
-</FrameLayout>
+        <ImageView
+            android:id="@+id/iv_common_action_bar_back"
+            android:layout_width="52dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:scaleType="center"
+            android:src="@drawable/action_bar_back_drawable_selector_blue" />
+
+        <TextView
+            android:id="@+id/tv_search_result_title"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:gravity="center_vertical"/>
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#F5F6FF" >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/fragment_search_result_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/tv_search_result_empty_tips"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="160dp"
+            android:drawableTop="@drawable/ic_search_result_empty"
+            android:drawablePadding="15dp"
+            android:textSize="20dp"
+            android:textColor="@color/black_20"
+            android:text="@string/search_result_empty_tips"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:background="@drawable/main_shadow"/>
+
+    </FrameLayout>
+
+
+</LinearLayout>
