--- a/app/src/main/res/layout/item_search_result.xml
+++ b/app/src/main/res/layout/item_search_result.xml
@@ -1,30 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="50dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="ContentDescription,SpUsage"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
+    android:background="@color/white">
 
-   <ImageView
-       android:id="@+id/item_search_result_icon"
-       android:layout_width="20dp"
-       android:layout_height="20dp"
-       android:layout_marginLeft="10dp"
-       android:layout_gravity="center_vertical"/>
+    <ImageView
+        android:id="@+id/item_search_result_icon"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_gravity="center_vertical" />
 
-   <TextView
-       android:id="@+id/item_search_result_name"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginLeft="10dp"
-       android:text="name"
-       android:layout_gravity="center_vertical"/>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:orientation="vertical"
+        android:background="@drawable/bg_item_main_storage_list_style">
 
-   <TextView
-       android:id="@+id/item_search_result_path"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_marginLeft="10dp"
-       android:text="path"
-       android:layout_gravity="center_vertical"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/item_search_result_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:lines="1"
+                android:textColor="@color/black_70"
+                android:textSize="14dp" />
+
+            <TextView
+                android:id="@+id/item_search_result_path"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:maxLines="2"
+                android:textColor="@color/black_40"
+                android:textSize="12dp" />
+
+        </LinearLayout>
+
+
+    </FrameLayout>
 
 </LinearLayout>
