--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -40,11 +40,24 @@
             android:id="@+id/ll_no_file"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:background="@color/list_divider_line_color_f5f6ff"
             android:visibility="gone">
+            <ImageView
+                android:layout_width="@dimen/drawer_item_height_50dp"
+                android:layout_height="@dimen/drawer_item_height_50dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="160dp"
+                android:src="@drawable/no_items_show"/>
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:textSize="20sp"
+                android:lines="1"
+                android:textColor="@color/light_gray1"
                 android:text="@string/no_file_hint"/>
         </LinearLayout>
     </FrameLayout>
