--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -42,6 +42,9 @@
 
     <!-- common -->
     <color name="common_status_bar_bg">#1C72B4</color>
+    <color name="common_status_bar_gray">#E1E1E1</color>
+    <color name="common_status_bar_green">#3bbbab</color>
+    <color name="common_status_bar_red">#E06C6C</color>
     <color name="common_action_bar_bg">#4FABFF</color>
     <color name="common_action_bar_search_under_line">#BABABA</color>
     <color name="common_action_bar_search_cursor_color">#39BDAC</color>
