--- a/app/src/main/res/layout/inner_item_file.xml
+++ b/app/src/main/res/layout/inner_item_file.xml
@@ -41,6 +41,7 @@
         android:padding="8dp"/>
 
     <View
+        android:id="@+id/inner_item_file_divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_alignParentBottom="true"
