--- a/app/src/main/res/layout/layout_permission_alarm_view_merge.xml
+++ b/app/src/main/res/layout/layout_permission_alarm_view_merge.xml
@@ -1,163 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_permission_alarm_dialog_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="#000000">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
-    <LinearLayout
-        android:id="@+id/rl_permission_alarm_dialog_content"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/white"
-        tools:background="@color/colorAccent">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/app_name"
+        android:textColor="@color/black_20"
+        android:textSize="@dimen/h5_12"/>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/permission_alarm_view_merge_content_rl"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_marginTop="38dp">
+
+        <ImageView
+            android:id="@+id/iv_permission_alarm_right_arrow"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="30dp"
+            android:rotation="90"
+            android:src="@drawable/arrow_up"
+            android:visibility="invisible"
+            tools:visibility="visible"/>
+
+        <ImageView
+            android:id="@+id/iv_permission_alarm_left_arrow"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="30dp"
+            android:rotation="-90"
+            android:src="@drawable/arrow_up"
+            android:visibility="invisible"
+            tools:visibility="visible"/>
+
+        <HorizontalScrollView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="55dp"
+            android:layout_marginRight="55dp"
+            android:scrollbars="none">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="vertical"
-                android:paddingLeft="30dp"
-                android:paddingRight="30dp"
-                android:paddingTop="30dp">
-
-                <TextView
-                    android:id="@+id/tv_permission_alarm_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="end"
-                    android:maxLines="1"
-                    android:text="@string/no_new_permissions_line1"
-                    android:textColor="#666666"
-                    android:textSize="16sp"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:id="@+id/tv_permission_alarm_desc"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:ellipsize="end"
-                    android:maxLines="3"
-                    android:text="@string/no_new_permissions_line2"
-                    android:textColor="#666666"
-                    android:textSize="12sp"/>
+                android:id="@+id/ll_permission_alarm_merge_logo"
+                android:layout_width="wrap_content"
+                android:layout_height="60dp"
+                android:gravity="center"
+                android:orientation="horizontal">
             </LinearLayout>
-        </RelativeLayout>
+        </HorizontalScrollView>
+    </RelativeLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="11dp"
-            android:layout_marginTop="14dp">
+    <TextView
+        android:id="@+id/tv_permission_alarm_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="18dp"
+        android:text="@string/no_new_permissions_line1"
+        android:layout_below="@id/permission_alarm_view_merge_content_rl"
+        android:textColor="@color/black_70"
+        android:textSize="@dimen/h4_14"
+        tools:text="@string/no_new_permissions_line1"/>
 
-            <ImageView
-                android:id="@+id/iv_permission_alarm_right_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="14dp"
-                android:src="@drawable/ic_about_logo"
-                android:visibility="invisible"
-                tools:visibility="visible"/>
-
-            <ImageView
-                android:id="@+id/iv_permission_alarm_left_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="14dp"
-                android:rotation="180"
-                android:src="@drawable/ic_about_logo"
-                android:visibility="invisible"
-                tools:visibility="visible"/>
-
-            <HorizontalScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:scrollbars="none">
-
-                <LinearLayout
-                    android:id="@+id/ll_permission_alarm_merge_logo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="horizontal">
-                </LinearLayout>
-            </HorizontalScrollView>
-        </RelativeLayout>
-
-        <TextView
-            android:id="@+id/tv_permission_alarm_details"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="22dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="@string/permission_dialog_dital_txt_tip"
-            android:textColor="#4FAAFF"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            />
-
-        <FrameLayout
-            android:id="@+id/fl_permission_alarm_ad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_marginBottom="24dp"
-            android:visibility="gone">
-
-        </FrameLayout>
-    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_permission_alarm_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_below="@id/tv_permission_alarm_title"
+        android:text="@string/no_new_permissions_line2"
+        android:textColor="@color/black_70"
+        android:textSize="@dimen/h4_14"
+        tools:text="@string/no_new_permissions_line2"/>
 
     <ImageView
         android:id="@+id/view_permission_alarm_view_merge_close"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="24dp"
-        android:src="@drawable/ic_about_logo"/>
-
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_close"/>
 
     <ImageView
         android:id="@+id/view_permission_merge_setting"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:layout_toLeftOf="@id/view_permission_alarm_view_merge_close"
-        android:src="@drawable/ic_about_logo"/>
+        android:src="@drawable/ic_setting"/>
 
-    <TextView
+    <FrameLayout
         android:id="@+id/dialog_stop_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="24dp"
-        android:layout_toLeftOf="@id/view_permission_alarm_view_merge_close"
-        android:background="@color/white"
-        android:drawablePadding="4dp"
-        android:drawableRight="@drawable/ic_about_logo"
-        android:gravity="center"
-        android:text="@string/common_stop"
-        android:textColor="#FC6F5B"
-        android:textSize="14sp"
-        android:visibility="gone"/>
+        android:layout_below="@id/view_permission_merge_setting"
+        android:layout_alignRight="@id/view_permission_merge_setting"
+        android:visibility="gone"
+        tools:visibility="visible"
+        android:background="@drawable/bg_popup_window">
 
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:layout_gravity="center"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textColor="@color/black_70"
+            android:textSize="@dimen/h4_14"
+            android:text="@string/common_stop"/>
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/tv_permission_alarm_details"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@id/tv_permission_alarm_desc"
+        android:layout_marginTop="22dp"
+        android:background="@drawable/tip_btu_shape"
+        android:gravity="center"
+        android:textColor="#FF39BDAC"
+        android:textSize="@dimen/h3_16"
+        android:textStyle="bold"
+        android:text="@string/permission_dialog_dital_txt_tip"
+        tools:text="@string/permission_dialog_dital_txt_tip"/>
+
+    <FrameLayout
+        android:id="@+id/fl_permission_alarm_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_permission_alarm_details"
+        android:visibility="gone">
+    </FrameLayout>
+
+</merge>
