--- a/app/src/main/res/layout/view_permission_alert.xml
+++ b/app/src/main/res/layout/view_permission_alert.xml
@@ -1,128 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:imagecontrol="http://schemas.android.com/apk/res-auto"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:id="@+id/activity_permission_alarm_dialog_root"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+<merge
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white">
 
-    <LinearLayout
-        android:id="@+id/rl_permission_alarm_dialog_content"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:orientation="vertical"
-        android:background="@color/white"
-        tools:background="@color/colorAccent">
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/app_name"
+        android:textColor="@color/black_20"
+        android:textSize="@dimen/h5_12"/>
 
-        <TextView
-            android:id="@+id/tv_permission_alarm_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="44dp"
-            android:ellipsize="end"
-            android:gravity="center_horizontal"
-            android:lineSpacingMultiplier="1.2"
-            android:maxLines="2"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:text="@string/permission_alarm_dialog_title_lv1_lv2"
-            android:textColor="#666666"
-            android:textSize="15sp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/tv_permission_alarm_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="8dp"
-            android:ellipsize="end"
-            android:gravity="center_horizontal"
-            android:maxLines="2"
-            android:text="@string/permission_alarm_dialog_content_lv1"
-            android:textColor="#666666"
-            android:textSize="13sp"/>
-
-        <TextView
-            android:id="@+id/tv_permission_alarm_details"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="22dp"
-            android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:text="@string/permission_dialog_dital_txt_tip"
-            android:textColor="#4FAAFF"
-            android:textSize="14sp"/>
-
-        <FrameLayout
-            android:id="@+id/fl_permission_alarm_ad"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/rl_permission_alarm_dialog_content"
-            android:visibility="gone">
-        </FrameLayout>
-
-    </LinearLayout>
-
-    <ImageView
+    <com.jb.filemanager.function.permissionalarm.view.RoundImageView
         android:id="@+id/iv_permission_alarm_icon"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:circle = "true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/common_default_app_icon"/>
+        android:layout_marginTop="21dp"
+        tools:src="@mipmap/ic_launcher"/>
 
-    <ImageView
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_alignBottom="@id/iv_permission_alarm_icon"
-        android:layout_alignRight="@id/iv_permission_alarm_icon"
-        android:layout_gravity="center_vertical"
-        android:src="@mipmap/ic_launcher"/>
+    <TextView
+        android:id="@+id/tv_permission_alarm_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:text="@string/app_name"
+        android:layout_below="@id/iv_permission_alarm_icon"
+        android:textColor="@color/black_70"
+        android:textSize="@dimen/h4_14"
+        tools:text="@string/permission_alarm_dialog_title_lv1_lv2"/>
 
+    <TextView
+        android:id="@+id/tv_permission_alarm_description"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="4dp"
+        android:layout_below="@id/tv_permission_alarm_title"
+        android:text="@string/permission_alarm_dialog_content_lv1"
+        android:textColor="@color/black_70"
+        android:textSize="@dimen/h4_14"
+        tools:text="@string/permission_alarm_dialog_content_lv1"/>
 
     <ImageView
         android:id="@+id/view_permission_alert_close"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="44dp"
-        android:src="@drawable/ic_about_logo"/>
-
-    <!-- android:src="@drawable/fire_wall_close"-->
-
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_close"/>
 
     <ImageView
         android:id="@+id/view_permission_alert_setting"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="16dp"
         android:layout_toLeftOf="@id/view_permission_alert_close"
-        android:src="@drawable/ic_about_logo"/>
+        android:src="@drawable/ic_setting"/>
 
-    <!--android:src="@drawable/day_report_setting"-->
-
-    <TextView
+    <FrameLayout
         android:id="@+id/dialog_stop_stop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="44dp"
-        android:layout_toLeftOf="@id/view_permission_alert_close"
-        android:background="@color/white"
-        android:drawablePadding="4dp"
-        android:drawableRight="@drawable/ic_about_logo"
-        android:gravity="center"
-        android:text="@string/common_stop"
-        android:textColor="#FC6F5B"
-        android:textSize="14sp"
+        android:layout_below="@id/view_permission_alert_setting"
+        android:layout_alignRight="@id/view_permission_alert_setting"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible"
+        android:background="@drawable/bg_popup_window">
 
-    <!-- android:drawableRight="@drawable/day_report_stop"-->
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:layout_gravity="center"
+            android:paddingTop="7dp"
+            android:paddingBottom="7dp"
+            android:textColor="@color/black_70"
+            android:textSize="@dimen/h4_14"
+            android:text="@string/common_stop"/>
 
-</RelativeLayout>
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/tv_permission_alarm_details"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_below="@id/tv_permission_alarm_description"
+        android:layout_marginTop="22dp"
+        android:background="@drawable/tip_btu_shape"
+        android:gravity="center"
+        android:textColor="#FF39BDAC"
+        android:textSize="@dimen/h3_16"
+        android:textStyle="bold"
+        android:text="@string/permission_dialog_dital_txt_tip"
+        tools:text="@string/permission_dialog_dital_txt_tip"/>
+
+    <FrameLayout
+        android:id="@+id/fl_permission_alarm_ad"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_permission_alarm_details"
+        android:visibility="gone">
+    </FrameLayout>
+
+</merge>
