--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="SpUsage,ContentDescription"
     android:fitsSystemWindows="true"
@@ -21,6 +21,15 @@
             android:layout_gravity="center"
             android:scaleType="center"
             android:src="@drawable/action_bar_back_drawable_selector_blue" />
+
+        <TextView
+            android:id="@+id/tv_fragment_search_title"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical"
+            android:textSize="18dp"
+            android:textColor="@color/black_70"
+            android:visibility="gone"/>
 
         <RelativeLayout
             android:id="@+id/rl_main_action_bar_search_container"
@@ -69,12 +78,56 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/fragment_search_transparent_bg"
+    <LinearLayout
+        android:id="@+id/ll_fragment_search_anim_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#7f000000"/>
+        android:layout_marginTop="50dp"
+        android:orientation="horizontal"
+        android:background="#F5F6FF"
+        android:visibility="gone">
 
-    <!--中间有一个加载动画-->
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
 
-</LinearLayout>
+        <View
+            android:id="@+id/view_fragment_search_anim_1"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginEnd="14dp"
+            android:background="#2ED6C1"/>
+
+        <View
+            android:id="@+id/view_fragment_search_anim_2"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="160dp"
+            android:background="#2ED6C1"/>
+
+        <View
+            android:id="@+id/view_fragment_search_anim_3"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginTop="160dp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginStart="14dp"
+            android:background="#2ED6C1"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"/>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:layout_marginTop="50dp"
+        android:background="@drawable/main_shadow"/>
+
+</FrameLayout>
