--- a/app/src/main/res/layout/dialog_file_rename.xml
+++ b/app/src/main/res/layout/dialog_file_rename.xml
@@ -28,6 +28,7 @@
         android:layout_marginTop="21dp"
         android:layout_marginLeft="24dp"
         android:layout_marginRight="24dp"
+        android:gravity="center_vertical"
         android:background="#FF8181"
         android:textColor="#FFFFFF"
         android:textSize="12dp"
