--- a/app/src/main/res/drawable/bg_with_top_border_line_grey.xml
+++ b/app/src/main/res/drawable/bg_with_top_border_line_grey.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:top="-2dp" android:left="-2dp" android:right="-2dp">
+    <item >
         <shape>
             <solid android:color="@color/list_divider_line_color_e7e9f3"/>
         </shape>
     </item>
-    <!-- 此处定义只有上下两边有边框 高度为1像素-->
+    <!--此处定义只有上下两边有边框 高度为1像素-->
     <item android:top="1dp">
         <!--边框里面背景颜色 白色-->
         <shape>
-            <solid android:color="#ffffff" />
+            <solid android:color="@color/list_divider_line_color_f5f6ff" />
         </shape>
     </item>
 </layer-list>
+
