--- a/app/src/main/res/layout/activity_recent_file.xml
+++ b/app/src/main/res/layout/activity_recent_file.xml
@@ -26,4 +26,10 @@
         android:groupIndicator="@null"
         android:overScrollMode="never"
         android:scrollbars="none"/>
+
+    <com.jb.filemanager.ui.widget.BottomOperateBar
+        android:id="@+id/bob_bottom_operator"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="60dp"/>
 </RelativeLayout>
