--- a/app/src/main/res/layout/common_action_bar_without_search_blue_back.xml
+++ b/app/src/main/res/layout/common_action_bar_without_search_blue_back.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:orientation="vertical"
+    android:background="@color/white"
     tools:background="@color/colorAccent">
 
     <TextView
