--- a/app/src/main/res/layout/activity_clean_trash.xml
+++ b/app/src/main/res/layout/activity_clean_trash.xml
@@ -9,6 +9,15 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="112dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="27dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:alpha="0.08"
+        android:src="@drawable/white_broom_bg"/>
+
 
     <LinearLayout
         android:id="@+id/ll_content"
@@ -21,26 +30,17 @@
         <RelativeLayout
             android:id="@+id/rl_top_container"
             android:layout_width="match_parent"
-            android:layout_height="135dp">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:alpha="0.1"
-                android:src="@drawable/white_broom_bg"/>
+            android:layout_height="97dp">
 
             <TextView
                 android:id="@+id/tv_trash_size_number"
-                android:layout_marginTop="32dp"
+                android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
                 android:layout_marginStart="16dp"
                 android:textColor="@color/white"
-                android:textSize="60sp"
+                android:textSize="60dp"
                 android:text="0"
                 tools:text="328"/>
 
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:layout_toRightOf="@+id/tv_trash_size_number"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="18dp"
                 android:textSize="16sp"
                 android:text="MB"
                 android:textColor="@color/white"/>
@@ -61,6 +61,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="9dp"
                 android:layout_below="@+id/tv_trash_size_unit"
                 android:layout_marginStart="15dp"
                 android:layout_toRightOf="@+id/tv_trash_size_number"
@@ -75,7 +76,7 @@
                 style="@style/StyleProgressBar"
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
-                android:progress="0"/>
+                android:progress="50"/>
 
             <TextView
                 android:id="@+id/tv_trash_path"
@@ -118,8 +119,8 @@
 
     <ImageView
         android:id="@+id/iv_clean_button_red"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:visibility="gone"
         android:src="@drawable/trash_clean_icon"
         android:layout_marginBottom="40dp"
