--- a/app/src/main/res/layout/app_manager_title_with_search.xml
+++ b/app/src/main/res/layout/app_manager_title_with_search.xml
@@ -9,7 +9,7 @@
     android:layout_height="56dp"
     android:orientation="horizontal"
     tools:background="@color/colorAccent"
-    android:background="@android:color/transparent">
+    android:background="@android:color/white">
 
 
     <ImageView
