--- a/app/src/main/res/layout/item_clean_trash_child_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child_child.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:id="@+id/item_child_child_root"
@@ -11,19 +11,19 @@
         android:layout_width="28dp"
         android:src="@color/black"
         android:layout_height="28dp"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="30dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="16dp"
         android:contentDescription="@null"/>
 
     <TextView
         android:id="@+id/item_child_child_name"
-        android:layout_width="150dp"
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="11dp"
-        android:layout_marginLeft="68dp"
+        android:layout_gravity="center_vertical"
         android:textColor="@color/black_70"
         android:ellipsize="middle"
-        android:ems="10"
         android:text="aaaa"
         android:singleLine="true"
         android:textSize="12dp"/>
@@ -33,10 +33,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
+        android:layout_marginLeft="16dp"
         android:textColor="@color/black_40"
         android:text="aaaa"
-        android:layout_marginTop="27dp"
-        android:layout_marginLeft="68dp"
+        android:layout_gravity="center_vertical"
         android:textSize="10dp"/>
 
 
@@ -50,4 +50,4 @@
         android:paddingRight="12dp"
         android:paddingLeft="22dp"
         android:src="@drawable/select_multi"/>
-</RelativeLayout>
+</LinearLayout>
